; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp.c_scsp_debug_add_instrument.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_scsp.c_scsp_debug_add_instrument.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@debug_instrument_pos = common dso_local global i64 0, align 8
@NUM_DEBUG_INSTRUMENTS = common dso_local global i64 0, align 8
@debug_instruments = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scsp_debug_add_instrument(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i64, i64* @debug_instrument_pos, align 8
  %7 = load i64, i64* @NUM_DEBUG_INSTRUMENTS, align 8
  %8 = icmp sge i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %22

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @scsp_debug_search_instruments(i32 %11, i32* %4, i32* %5)
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %22, label %15

15:                                               ; preds = %10
  %16 = load i32, i32* %2, align 4
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @debug_instruments, align 8
  %18 = load i64, i64* @debug_instrument_pos, align 8
  %19 = add nsw i64 %18, 1
  store i64 %19, i64* @debug_instrument_pos, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32 %16, i32* %21, align 4
  br label %22

22:                                               ; preds = %9, %15, %10
  ret void
}

declare dso_local i32 @scsp_debug_search_instruments(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
